# docuflow

./: pyproject.toml  requirements.txt
.github/workflows/: apk.yml  main.yml
src/: main.py  pubspec.yaml
src/.dart_tool/: package_config.json
src/.dart_tool/extension_discovery/: vs_code.json
src/assets/json/: state.json
src/assets/lottie/: 1.json  Facebook.json  Instagram.json  Youtube.json
src/controls/: google_signin.py
src/flutter/flet_google_signin/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml  upload-keystore.jks
src/flutter/flet_google_signin/test/: flet_google_signin_test.dart
src/pages/: Cart.py  Checkout.py  Favorites.py  InitPage.py  Order.py  OrderDetail.py  PaymentSuccess.py  ProductDetail.py  User.py  home.py
src/pages/Domiciliario/: RegisterDomi.py
src/pages/Extras/: Autorizacion_tratamiento_datos.py  Politicas_privacidad.py  Terminos_condiciones.py
src/pages/Tienda/: Cart.py  Checkout.py  Favorites.py  Order.py  OrderDetail.py  PaymentSuccess.py  ProductDetail.py  home.py
src/pages/auth/: AppleLogin.py  ForgotPassword.py  GoogleLogin.py  Login.py  PageNotFound.py  Profile.py  Register.py  Token.py
src/pages/data/: Registro_civil.py  Salida_menor.py
src/pages/endpoints/: Auth.py  Cart.py  Coupon.py  Google.py  Images.py  Orders.py  Payments.py  Shipping.py  Tienda.py  User.py  Wishlist.py
src/pages/utils/: Fecha.py  Firma.py  alert.py  carusel.py  config.py  content.py  dropdownFlag.py  image.py  inputs.py  json.py  loader.py  navigation.py  numero_telefono.py  state.py
src/pages/utils/components/: home.py
src/pages/utils/controls/: Fecha.py  dropdownFlag.py  inputs.py  numero_telefono.py
