[project]
name = "docuflow"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1",
  "requests"
]
compile.app = true 
compile.packages = true 
compile.cleanup = true 

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "DocuFlow"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.splash]
color = "#005B7A" # --splash-color
dark_color = "#005B7A" # --splash-dark-color
web = false # --no-web-splash
ios = false # --no-ios-splash
android = false # --no-android-splash