[project]
name = "docuflow"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1",
  "requests",
  "Pillow"
]


[tool.flet]
org = "com.mycompany"
product = "DocuFlow"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"
compile.app = true 
compile.packages = true 
compile.cleanup = true 

[tool.flet.app]
path = "src"

[tool.flet.splash]
color = "#007354"
dark_color = "#007354"
web = false 
ios = true
android = true 