[project]
name = "docuflow"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Jesus Delgado", email = "themurder261@gmail.com"}
]


dependencies = [
  "flet==0.26.0",
  "requests",
  "Pillow",
  "aiohttp",
  "flet_core",
  "flet-lottie"
]

[tool.flet.flutter.pubspec.dependency_overrides]
file_picker = "8.1.4"

[tool.flet]
org = "com.mycompany"
product = "DocuFlow"
company = "Flet"
copyright = "Copyright (C) 2025 by DocuFlow"
app.module = "main.py"
app.path = "src"
compile.app = true 
compile.packages = true 
compile.cleanup = true 


[tool.flet.splash]
color = "#007354"
dark_color = "#007354"
web = false 
ios = false  
android = false 


[tool.flet.android]
adaptive_icon_background = "" # --android-adaptive-icon-background
split_per_abi = false # --split-per-abi

[tool.flet.flutter.dependencies]
flet_google_signin.path = "/Users/themu/Proyectos/docuflow/src/flutter/flet_google_signin"
